--- a/about.html
+++ b/about.html
@@ -29,7 +29,10 @@
         <div>
           <aside>
             <h2>Got Coke?</h2>
-            <p>Our cocaine is grown in the heart of Columbia. The cocaine capital of the world! Each plant is treated with extreme care and attention, so that the cocaine in our beverages is the best quality possible. We provide our cocaine fields with world class security to ensure our workers safety and to ensure that our cocaine remains unadulterated. You're sure to taste the difference when you drink Cocaine Coca-Cola as we are currently the only company on the planet that uses 100% pure cocaine in our beverages! No additional additives are necessary.</p>
+            <p>Our cocaine is grown in the heart of Columbia. The cocaine capital of the world! Each plant is treated with extreme care and attention, 
+              so that the cocaine in our beverages is the best quality possible. We provide our cocaine fields with world class security to ensure our 
+              workers safety and to ensure that our cocaine remains unadulterated. You're sure to taste the difference when you drink Cocaine Coca-Cola 
+              as we are currently the only company on the planet that uses 100% pure cocaine in our beverages! No additional additives are necessary.</p>
           </aside>
         </div>
       </section>
@@ -38,7 +41,10 @@
         <div>
           <aside>
             <h2>Catch A Buzz</h2>
-            <p>Our Cocaine Coca-Cola factories are often considered the most sanitary factories on the planet, and we didn't pay for anyone to say that! Our employees thrive on delivering a well balanced, buzzy beverage every time. First the bottles are sanitized, then they are filled with sugar, and spices. Afterwards exactly one gram of cocaine is added to every bottle and it is topped up with water. That's enough cocaine to keep you awake all weekend! We don't cut corners here at Coca-Cola. We want to ensure that you have a great buzz, every buzz.</p>
+            <p>Our Cocaine Coca-Cola factories are often considered the most sanitary factories on the planet, and we didn't pay for anyone to say that! 
+              Our employees thrive on delivering a well balanced, buzzy beverage every time. First the bottles are sanitized, then they are filled with 
+              sugar, and spices. Afterwards exactly one gram of cocaine is added to every bottle and it is topped up with water. That's enough cocaine to
+              keep you awake all weekend! We don't cut corners here at Coca-Cola. We want to ensure that you have a great buzz, every buzz.</p>
           </aside>
         </div>
       </section>
@@ -47,7 +53,10 @@
         <div>
           <aside>
             <h2>Coke For Everyone!</h2>
-            <p>These days everyone can enjoy coke. Thanks to our constant lobbying of your government, even children are welcome to catch a buzz with the rest of us! When drinking Cocaine Coca-Cola you'll have more energy, more fun, and require less sleep. Theres no wonder why Cocaine Coca-Cola continues to be the worlds most popular beverage by an overwhelming amount! At Coca-Cola, we pride ourselves on delivering a one of a kind of experience and that experience for many is Cocaine Coca-Cola.</p>
+            <p>These days everyone can enjoy coke. Thanks to our constant lobbying of your government, even children are welcome to catch a buzz 
+              with the rest of us! When drinking Cocaine Coca-Cola you'll have more energy, more fun, and require less sleep. Theres no wonder why 
+              Cocaine Coca-Cola continues to be the worlds most popular beverage by an overwhelming amount! At Coca-Cola, we pride ourselves on 
+              delivering a one of a kind of experience and that experience for many is Cocaine Coca-Cola.</p>
           </aside>
         </div>
       </section>
